# net-stuff

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cicd.yml
file_sharing_asio/: CMakeLists.txt  main.cpp
file_sharing_asio/src/: CMakeLists.txt  FileSharingServer.cpp  FileSharingServer.h  logger.h
lin_sock_webserver/: CMakeLists.txt  riklibc.cpp  riklibc.hpp
lin_sock_webserver/Networking/Servers/: RikServer.cpp  RikServer.hpp  SimpleServer.cpp  SimpleServer.hpp
lin_sock_webserver/Networking/Sockets/: BindingSocket.cpp  BindingSocket.hpp  ConnectingSocket.cpp  ConnectingSocket.hpp  ListeningSocket.cpp  ListeningSocket.hpp  SimpleSocket.cpp  SimpleSocket.hpp
proxy_beast_asio/: CMakeLists.txt  Proxy.cpp  Proxy.hpp  main.cpp
