find_package(Boost REQUIRED)
find_package(OpenSSL REQUIRED)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
else()
  message(STATUS "Boost NOT Found !")
endif(Boost_FOUND)

add_executable(proxy main.cpp "Proxy.cpp")
target_link_libraries(proxy PRIVATE  ${Boost_LIBRARIES} OpenSSL::SSL OpenSSL::Crypto)